# smolGPT

./: .gitignore  README.md  bigram_cnt.py  dalma.md  eval.ipynb  eval.py  main.py  pyproject.toml
data/: utils.py
ft/: setup.py  stress.py  utils.py  wandblog.py
model/: architecture.py  architecturing.py  decoding.py  decoding_strategies.py  split.py  tokenizers.py  tokenizing.py  training.py
models/: tokenizers.py
prompt/: notebook_test.ipynb  prompt_opt.py  quickies.ipynb
quant/: int8.py
tests/: conftest.py  test_split.py  test_tokenize.py  test_tokenizers.py
