[tool.poetry]
name = "smolGPT"
version = "0.1.0"
description = ""
authors = ["marcalph <marcalph@protonmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.45.1"
python-dotenv = "^1.0.1"
seaborn = "^0.13.2"
pandas = "^2.2.3"
tiktoken = "^0.8.0"
litellm = "^1.53.4"
weave = "^0.51.23"
kaggle = "^1.6.17"
scikit-learn = "^1.5.2"
wandb = "^0.19.0"
torch = "^2.6.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ruff = "^0.9.5"
pytest = "^8.3.4"
hypothesis = "^6.125.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
