[tool.poetry]
name = "smolGPT"
version = "0.1.0"
description = ""
authors = ["marcalph <marcalph@protonmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
torch = "~=2.4.0"
transformers = "^4.48.3"
graphviz = "^0.20.3"
networkx = "^3.4.2"
plotly = "^6.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ruff = "^0.9.5"
pytest = "^8.3.4"
hypothesis = "^6.125.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
